--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start-server": "node ./server.js",
     "debug-server": "nodemon --inspect ./server.js"
   },
   "keywords": [],
