--- a/server/.env
+++ b/server/.env
@@ -3,7 +3,7 @@ PG_USER = 'garagevparrot_m'
 PG_PASSWORD = 'Okolo2023'
 PG_HOST = 'pj624348-001.eu.clouddb.ovh.net'
 PG_PORT = 35286
-URL_SITE = 'http://51.210.124.204:8000/file/'
+URL_SITE = 'https://garage-vparrot.fly.dev/file/'
 
 JWTPRIVATEKEY = "secretkey"
 SALT = 10
